strategy fixes
